--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
-  <h1>Judul</h1>
-  <p>Paragraf</p>
+  <h1>Impact byte Journey</h1>
+<p>Day 1</p>
+<p>Monday 8 January 2018</p>
 </body>
 
 </html>
