--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <h1>Impact byte Journey</h1>
 <p>Day 1</p>
 <p>Monday 8 January 2018</p>
+
+<p>Day 2</p>
+<p>Tuesday 9 January 2018</p>
 </body>
 
 </html>
