--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <h1>Impact byte Journey</h1>
-<p>Day 1</p>
+<li>Day 1</li>
 <p>Monday 8 January 2018</p>
 
-<p>Day 2</p>
+<li>Day 2</li>
 <p>Tuesday 9 January 2018</p>
 </body>
 
