--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-<link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-  <h1>Impact byte Journey</h1>
-<li>Day 1</li>
-<p>Monday 8 January 2018</p>
-
-<li>Day 2</li>
-<p>Tuesday 9 January 2018</p>
-
-<a href="https://impactbyte.com">link to impactbyte</a>
+  <div class="container">
+    <img src="./city2.jpg" alt="city picture">
+    <div class="center">
+      <ul class="navbar">
+        <li class="nav-item">
+          <a class="nav-link Portfolio" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link Travel" href="#">Travel</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link Culinary" href="#">Culinary</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link Movies" href="#">Movies</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </body>
 
 </html>
