--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
     <div class="center">
       <ul class="navbar">
         <li class="nav-item">
+          <a class="nav-link Home" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link About me" href="#">About me</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link Portfolio" href="#">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Travel" href="#">Travel</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Culinary" href="#">Culinary</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link Movies" href="#">Movies</a>
         </li>
       </ul>
     </div>
