--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 
 <body>
   <div class="container">
-    <img src="./city2.jpg" alt="city picture">
     <div class="center">
       <ul class="navbar">
         <li class="nav-item">
           <a class="nav-link Home" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link About me" href="#">About me</a>
+          <a class="nav-link About me" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Portfolio" href="#">Portfolio</a>
+          <a class="nav-link Portfolio" href="portfolio.html">Portfolio</a>
         </li>
       </ul>
     </div>
