--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li class="nav-item">
           <a class="nav-link Portfolio" href="portfolio.html">Portfolio</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link Contact" href="contact.html">Contact</a>
+        </li>
       </ul>
     </div>
   </div>
