--- a/section/contact.html
+++ b/section/contact.html
@@ -1,12 +1,27 @@
-<h1>Elegant Contact Form</h1>
-<form class="cf">
-  <div class="half left cf">
-    <input type="text" id="input-name" placeholder="Name">
-    <input type="email" id="input-email" placeholder="Email address">
-    <input type="text" id="input-subject" placeholder="Subject">
-  </div>
-  <div class="half right cf">
-    <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
-  </div>
-  <input type="submit" value="Submit" id="input-submit">
-</form>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="../styles/contact.css">
+
+</head>
+
+<body>
+  <h1>Contact Me</h1>
+  <form class="cf">
+    <div class="half left cf">
+      <input type="text" id="input-name" placeholder="Name">
+      <input type="email" id="input-email" placeholder="Email address">
+      <input type="text" id="input-subject" placeholder="Subject">
+    </div>
+    <div class="half right cf">
+      <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+    </div>
+    <input type="submit" value="Submit" id="input-submit">
+  </form>
+
+</body>
+
+</html>
