no repeat background

--- a/section/contact.html
+++ b/section/contact.html
@@ -21,7 +21,9 @@
     </div>
     <input type="submit" value="Submit" id="input-submit">
   </form>
-
+  <div class="about">
+    <a href="index.html">home</a>
+  </div>
 </body>
 
 </html>
