--- a/section/contact.html
+++ b/section/contact.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-  <h1>Contact Me</h1>
-  <form class="cf">
-    <div class="half left cf">
-      <input type="text" id="input-name" placeholder="Name">
-      <input type="email" id="input-email" placeholder="Email address">
-      <input type="text" id="input-subject" placeholder="Subject">
+  <div class="container">
+    <h1>Contact Me</h1>
+    <form class="cf">
+      <div class="half left cf">
+        <input type="text" id="input-name" placeholder="Name">
+        <input type="email" id="input-email" placeholder="Email address">
+        <input type="text" id="input-subject" placeholder="Subject">
+      </div>
+      <div class="half right cf">
+        <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+      </div>
+      <input type="submit" value="Submit" id="input-submit">
+    </form>
+    <div class="about">
+      <a href="index.html">home</a>
     </div>
-    <div class="half right cf">
-      <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
-    </div>
-    <input type="submit" value="Submit" id="input-submit">
-  </form>
-  <div class="about">
-    <a href="index.html">home</a>
   </div>
 </body>
 
