--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <a class="nav-link Home" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link About me" href="section/about.html">About me</a>
+          <a class="nav-link About me" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Portfolio" href="section/portfolio.html">Portfolio</a>
+          <a class="nav-link Portfolio" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link Contact" href="section/contact.html">Contact</a>
+          <a class="nav-link Contact" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
