--- a/section/about.html
+++ b/section/about.html
@@ -13,9 +13,27 @@
 <h1>Nina Kartina</h1>
 
 <body>
-  <div class="about">
-    <a href="index.html">home</a>
-  </div>
+
+  <body>
+    <div class="container">
+      <div class="center">
+        <ul class="navbar">
+          <li class="nav-item">
+            <a class="nav-link Home" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link About me" href="about.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link Portfolio" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link Contact" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </body>
 
 <footer>
