--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/portfolio.css">
   <title>NINANINONG</title>
 </head>
 
-
 <body>
-  <div class="portfolio">
-    <a href="index.html">home</a>
+  <h1>My Portfolio</h1>
+  <div class="container">
+    <div class="center">
+      <ul class="navbar">
+        <li class="nav-item">
+          <a class="nav-link Home" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link About me" href="about.html">About me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link Portfolio" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link Contact" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <h1>My portfolio</h1>
 </body>
+
+</html>
